glib-unix.h: Unconditionally include unistd.h

danw points out it's part of POSIX.

https://bugzilla.gnome.org/show_bug.cgi?id=649201